KRecentFileActions: Fix use after free

Iterators are invalidated after erase.

BUG: 476312